Updated .gitignore to iglgfdkgsllm

--- a/views/deliverynotes.ejs
+++ b/views/deliverynotes.ejs
@@ -1,331 +1,86 @@
-<div class="mx-auto ms-lg-80 ps-lg-4">
-  <section>
-    <div class="p-8 bg-white navbar-light">
-      <div class="row align-items-center justify-content-between">
-        <div class="col-12 col-lg-6 mb-4 mb-lg-0">
-          <nav aria-label="breadcrumb">
-            <ol class="breadcrumb mb-0">
-              <li class="breadcrumb-item" aria-current="page">
-                <a class="d-flex align-items-center" href="#">
-                  <svg
-                    class="text-primary me-2"
-                    width="20"
-                    height="20"
-                    viewbox="0 0 20 20"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="M16.8737 16.875V9.02647C16.8737 8.93939 16.8555 8.85327 16.8202 8.77363C16.785 8.694 16.7335 8.6226 16.6691 8.56402L10.4187 2.88159C10.3036 2.77699 10.1537 2.71904 9.99821 2.71904C9.84272 2.71905 9.69281 2.77701 9.57777 2.88162L3.3282 8.56402C3.26377 8.6226 3.2123 8.69399 3.17707 8.77363C3.14185 8.85326 3.12366 8.93937 3.12366 9.02645V16.875"
-                      stroke="currentColor"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"></path>
-                    <path
-                      d="M1.24866 16.875H18.7487"
-                      stroke="currentColor"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"></path>
-                    <path
-                      d="M11.8732 16.8743V12.4993C11.8732 12.3336 11.8073 12.1746 11.6901 12.0574C11.5729 11.9402 11.4139 11.8743 11.2482 11.8743H8.74817C8.58241 11.8743 8.42344 11.9402 8.30623 12.0574C8.18902 12.1746 8.12317 12.3336 8.12317 12.4993V16.8743"
-                      stroke="currentColor"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"></path>
-                  </svg>
-                  <span>Dashboard</span>
-                </a>
-              </li>
-            </ol>
-          </nav>
-        </div>
-        <div class="col-12 col-lg-6 d-flex">
-          <a
-            class="btn btn-outline-light d-inline-flex align-items-center justify-content-center p-0 ms-lg-auto me-2 shadow rounded-2"
-            href="#"
-            style="width: 40px; height: 40px">
-            <svg
-              width="12"
-              height="12"
-              viewbox="0 0 12 12"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M5.4375 9.375C7.61212 9.375 9.375 7.61212 9.375 5.4375C9.375 3.26288 7.61212 1.5 5.4375 1.5C3.26288 1.5 1.5 3.26288 1.5 5.4375C1.5 7.61212 3.26288 9.375 5.4375 9.375Z"
-                stroke="#7A899B"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"></path>
-              <path
-                d="M8.22156 8.22189L10.4997 10.5"
-                stroke="#7A899B"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"></path>
-            </svg>
-          </a>
-          <a
-            class="btn btn-outline-light d-inline-flex align-items-center justify-content-center p-0 me-2 shadow rounded-2"
-            href="#"
-            style="width: 40px; height: 40px">
-            <svg
-              width="12"
-              height="12"
-              viewbox="0 0 12 12"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M2.12974 8.29964C1.57041 7.35675 1.37453 6.2421 1.57887 5.165C1.78322 4.0879 2.37374 3.12245 3.23955 2.44994C4.10535 1.77742 5.18688 1.4441 6.28105 1.51257C7.37522 1.58104 8.40676 2.04659 9.18197 2.8218C9.95718 3.597 10.4227 4.62854 10.4912 5.72271C10.5597 6.81688 10.2264 7.89841 9.55386 8.76422C8.88135 9.63003 7.9159 10.2206 6.8388 10.4249C5.76171 10.6293 4.64706 10.4334 3.70416 9.87406L3.70417 9.87401L2.14931 10.3183C2.08498 10.3366 2.01691 10.3375 1.95214 10.3207C1.88738 10.3039 1.82828 10.2701 1.78097 10.2228C1.73366 10.1755 1.69986 10.1164 1.68308 10.0516C1.6663 9.98687 1.66714 9.9188 1.68552 9.85447L2.12977 8.29961L2.12974 8.29964Z"
-                stroke="#7A899B"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"></path>
-            </svg>
-          </a>
-          <a
-            class="btn btn-outline-light d-inline-flex align-items-center justify-content-center p-0 me-2 shadow rounded-2"
-            href="#"
-            style="width: 40px; height: 40px">
-            <svg
-              width="10"
-              height="12"
-              viewbox="0 0 10 12"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M4 11H6"
-                stroke="#7A899B"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"></path>
-              <path
-                d="M1.6988 4.14999C1.69819 3.73489 1.78393 3.32378 1.95108 2.94036C2.11823 2.55694 2.36348 2.20879 2.6727 1.91598C2.98192 1.62317 3.34899 1.39148 3.75275 1.23429C4.15651 1.07709 4.58897 0.997483 5.02522 1.00006C6.84554 1.01294 8.30157 2.45262 8.30157 4.18953V4.49999C8.30157 6.06693 8.64611 6.9762 8.94956 7.47317C8.98225 7.52627 8.99965 7.58663 8.99999 7.64817C9.00034 7.70971 8.98362 7.77025 8.95153 7.82368C8.91944 7.87711 8.87311 7.92155 8.81721 7.9525C8.76131 7.98346 8.69783 7.99984 8.63315 8H1.36685C1.30217 7.99984 1.23867 7.98345 1.18277 7.95249C1.12686 7.92153 1.08053 7.87708 1.04844 7.82364C1.01636 7.7702 0.999648 7.70965 1.00001 7.64811C1.00036 7.58656 1.01777 7.52619 1.05048 7.47309C1.3541 6.97611 1.69879 6.06685 1.69879 4.49999L1.6988 4.14999Z"
-                stroke="#7A899B"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"></path>
-            </svg>
-          </a>
-          <a href="#">
-            <img
-              class="img-fluid rounded-1"
-              style="width: 40px; height: 40px"
-              src="https://lh3.googleusercontent.com/a/AAcHTtfJwO6agah1DDbB2CKQ25F_zrsfyYqu-8d44zbNW8bzDDmB=s192-c-rg-br100"
-              alt="" />
-          </a>
+
+<section class="position-relative py-8 login-section">
+  <% for (let error of errors) { %>
+    <div class="alert alert-danger" role="alert"><%= error.message %></div>
+    <% } %> <% if(message.success){ %>
+    <div class="alert alert-success" role="alert"><%= message.success %></div>
+    <% } %>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-12 col-lg-6 py-lg-20">
+            <div class="mw-md mx-auto">
+              <a class="d-inline-block h3 mb-12 text-decoration-none" href="#">
+                <div class="position-relative mt-n20 mw-md mx-auto text-center">
+                  <!-- Add the d-none class to hide these elements -->
+                  <a href="/">
+                      <img src="sirius-assets/images/logos/sirius-logoo.png" alt="" width="196px" class="">
+                  </a>
+                  <h3 class="mb-8">Agrifora Management System</h3>
+                  <p class="mb-8">Login to manage inventory, order, delivery notes and more</p>
+              </div>
+              
+              <form action="/login" method="post">
+                <div class="mb-6">
+                  <label class="form-label" for="exampleForm1">Email Address</label>
+                  <input class="form-control" id="email" type="email" name="email" placeholder="supermario@example.com">
+                </div>
+                <div class="mb-6">
+                  <label class="form-label" for="exampleForm2">Password</label>
+                  <input class="form-control" id="password" name="password" type="password" placeholder="*******">
+                </div>
+                <div class="row mb-8">
+                  <div class="col-12 col-lg-auto">
+                    <div class="form-check">
+                      <input class="form-check-input" id="checkbox1-1" type="checkbox" value="" checked="">
+                      <label class="form-check-label" for="checkbox1-1">Remember me</label>
+                    </div>
+                  </div>
+                  <div class="col-12 col-lg-auto ms-auto"><a class="text-decoration-none" href="/resetpassword">Forgot password?</a></div>
+                </div>
+                <button type="submit" class="btn btn-primary py-3 mb-4 w-100">Login</button>
+               
+              </form>
+            </div>
+            <div class="d-lg-none mt-8 bg-dark py-16 px-8 mw-md mx-auto text-center">
+              <h5 class="mb-4 text-white">Stay up to date with your audience</h5>
+              <p class="mb-10 text-white">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+              <button class="btn me-4 p-1 rounded-circle btn-primary-light"></button>
+              <button class="btn me-4 p-1 rounded-circle btn-danger"></button>
+              <button class="btn p-1 rounded-circle btn-primary-light"></button>
+            </div>
+          </div>
         </div>
       </div>
+      <div class="d-none d-lg-flex align-items-center justify-content-center position-absolute top-0 bottom-0 end-0 col-6 bg-dark">
+        <img class="img-fluid" style="max-width: 100%; max-height: 624px; object-fit: cover; object-position: bottom;" src="sirius-assets/images/backgroundold.png" alt="">
     </div>
-  </section>
-
-  <div class="container">
-    <h1>Delivery Notes</h1>
-    <div class="row">
-      <div class="col-md-6">
-        <div class="input-group">
-          <input
-            type="date"
-            id="fromDate"
-            class="form-control"
-            placeholder="From date" />
-          <input
-            type="date"
-            id="toDate"
-            class="form-control"
-            placeholder="To date" />
-          <button id="goButton" class="btn btn-primary">Go</button>
-        </div>
-      </div>
-      <div class="col-md-2">
-        <input
-          type="text"
-          id="searchInput"
-          class="form-control"
-          placeholder="Search..." />
-      </div>
-      <div class="col-md-4">
-        <button type="button" class="btn btn-primary mt-3">
-          <i class="fas fa-cog"></i> Generate Report
-        </button>
-      </div>
-    </div>
-    <br />
-
-    <table class="table" id="delivery-notes-table">
-      <thead class="table-primary">
-        <tr>
-          <th>No.</th>
-          <th>Unit</th>
-          <th>Date</th>
-          <th>Action</th>
-        </tr>
-      </thead>
-      <tbody>
-        <!-- Example row with a hyperlink -->
-        <tr>
-          <td><a href="ddnote.html">DN001</a></td>
-          <td>HQ2 BDE CRANBORNE</td>
-          <td>2023-09-21</td>
-          <td>
-            <button
-              class="btn btn-primary"
-              type="button"
-              data-bs-toggle="offcanvas"
-              data-bs-target="#offcanvasWithBothOptions"
-              aria-controls="offcanvasWithBothOptions">
-              <i class="fas fa-eye"></i>
-              <!-- Font Awesome eye icon -->
-            </button>
-          </td>
-        </tr>
-        <tr>
-          <td><a href="ddnote.html">DN002</a></td>
-          <td>SCHOOL OF LOGISTICS</td>
-          <td>2023-09-21</td>
-          <td>
-            <button
-              class="btn btn-primary"
-              type="button"
-              data-bs-toggle="offcanvas"
-              data-bs-target="#offcanvasWithBothOptions"
-              aria-controls="offcanvasWithBothOptions">
-              <i class="fas fa-eye"></i>
-              <!-- Font Awesome eye icon -->
-            </button>
-          </td>
-        </tr>
-        <tr>
-          <td><a href="ddnote.html">DN003</a></td>
-          <td>ZS INF MBALA MBALA</td>
-          <td>2023-09-21</td>
-          <td>
-            <button
-              class="btn btn-primary"
-              type="button"
-              data-bs-toggle="offcanvas"
-              data-bs-target="#offcanvasWithBothOptions"
-              aria-controls="offcanvasWithBothOptions">
-              <i class="fas fa-eye"></i>
-              <!-- Font Awesome eye icon -->
-            </button>
-          </td>
-        </tr>
-        <tr>
-          <td><a href="ddnote.html">DN004</a></td>
-          <td>BOAT REGT KARIBA</td>
-          <td>2023-09-21</td>
-          <td>
-            <button
-              class="btn btn-primary"
-              type="button"
-              data-bs-toggle="offcanvas"
-              data-bs-target="#offcanvasWithBothOptions"
-              aria-controls="offcanvasWithBothOptions">
-              <i class="fas fa-eye"></i>
-              <!-- Font Awesome eye icon -->
-            </button>
-          </td>
-        </tr>
-
-        <!-- Add more rows with hyperlinks as needed -->
-      </tbody>
-    </table>
-
-    <div
-      class="offcanvas offcanvas-end"
-      style="width: 60%"
-      data-bs-scroll="true"
-      tabindex="-1"
-      id="offcanvasWithBothOptions"
-      aria-labelledby="offcanvasWithBothOptionsLabel">
-      <div class="offcanvas-header">
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="offcanvas"
-          aria-label="Close"></button>
-      </div>
-      <div class="offcanvas-body">
-        <div
-          class="embed-responsive embed-responsive-16by9"
-          style="height: 794px">
-          <iframe
-            id="pdf-preview"
-            class="embed-responsive-item"
-            src="ddnote.html"
-            width="100%"
-            height="100%"></iframe>
-        </div>
-        <!-- Print and Save buttons -->
-        <div>
-          <button class="btn btn-primary me-2" onclick="window.print()">
-            Print
-          </button>
-          <button class="btn btn-success">Save</button>
-        </div>
-        <!-- End of Print and Save buttons -->
-      </div>
-    </div>
-
+    
+    </section>
     <!-- Footer container -->
-    <div class="main-footer">
-      <span>&copy; 2023. Agrifora Management System. All Rights Reserved.</span>
-      <span
-        >Created by:
-        <a href="http://soxfort.com" target="_blank"
-          >Soxfort Solutions | Intuitive Innovation</a
-        ></span
-      >
-    </div>
-    <!-- main-footer -->
-  </div>
+<div class="main-footer">
+<span>&copy; 2023. Agrifora Management System. All Rights Reserved.</span>
+<span>Created by: <a href="http://soxfort.com" target="_blank">Soxfort Solutions | Intuitive Innovation</a></span>
+</div><!-- main-footer -->
+    <!-- Add this script after your HTML content -->
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    const loginForm = document.getElementById('loginForm');
+    const emailInput = document.getElementById('exampleForm1');
+    const passwordInput = document.getElementById('exampleForm2');
 
-  <script src="js/bootstrap/bootstrap.bundle.min.js"></script>
-  <script>
-    // Add an event listener to the search input
-    const searchInput = document.getElementById("search-input");
-    searchInput.addEventListener("input", function () {
-      filterTable();
-    });
+    // Add an event listener to the form submission
+    loginForm.addEventListener('submit', function (event) {
+      event.preventDefault();
 
-    // Function to filter the table based on user input
-    function filterTable() {
-      const input = searchInput.value.toLowerCase();
-      const table = document.getElementById("delivery-notes-table");
-      const rows = table.getElementsByTagName("tr");
-
-      for (let i = 1; i < rows.length; i++) {
-        // Start from 1 to skip the header row
-        const row = rows[i];
-        const deliveryNoteNumber = row.cells[0].textContent.toLowerCase();
-        const unit = row.cells[1].textContent.toLowerCase();
-        const date = row.cells[2].textContent.toLowerCase();
-
-        if (
-          deliveryNoteNumber.includes(input) ||
-          unit.includes(input) ||
-          date.includes(input)
-        ) {
-          row.style.display = "";
-        } else {
-          row.style.display = "none";
-        }
+      // Check if the test credentials are entered
+      if (emailInput.value === 'test@soxfort.com' && passwordInput.value === 'test') {
+        // Redirect to the homepage (you should replace 'homepage-url' with the actual URL)
+        window.location.href = 'index.html';
+      } else {
+        // Handle incorrect credentials (show an error message, etc.)
+        alert('Invalid credentials. Please try again.');
       }
-    }
-  </script>
-  <script>
-    const deliveryNoteLinks = document.querySelectorAll(
-      "#delivery-notes-table tbody a"
-    );
-    const pdfPreview = document.getElementById("pdf-preview");
-
-    // Add click event listeners to delivery note links
-    deliveryNoteLinks.forEach((link) => {
-      link.addEventListener("click", function (event) {
-        event.preventDefault(); // Prevent the link from navigating to a new page
-        const pdfUrl = this.getAttribute("href");
-        pdfPreview.src = pdfUrl; // Load the PDF in the iframe
-      });
     });
-  </script>
-</div>
+  });
+</script>
+
